objects/Depot_Routing__c.object
<CustomObject>
    <fields>
        <fullName>Collection_Cut_Off_Time__c</fullName>
        <label>Collection Cut Off Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Collection depot – collection routings only</description>
        <inlineHelpText>Collection depot – collection routings only</inlineHelpText>
        <label>Collection Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depot Routings</relationshipLabel>
        <relationshipName>Depot_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depot_Routing_Ref__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Depot Routing Ref</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division number – as an override- or blank for all divisions</description>
        <inlineHelpText>Division number – as an override- or blank for all divisions</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>Depot Routings</relationshipLabel>
        <relationshipName>Depot_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Round_Number__c</fullName>
        <label>Master Round Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Group__c</fullName>
        <label>Round Group</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Network__c</fullName>
        <label>Routing Network</label>
        <picklist>
            <picklistValues>
                <fullName>EXP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EWW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Service_Group__c</fullName>
        <label>Routing Service Group</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Table__c</fullName>
        <label>Routing Table</label>
        <referenceTo>Routing_Table__c</referenceTo>
        <relationshipLabel>Depot Routings</relationshipLabel>
        <relationshipName>Depot_Routings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Depot Routings</relationshipLabel>
        <relationshipName>Depot_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Depot Routing</label>
    <nameField>
        <displayFormat>DR-{00000000}</displayFormat>
        <label>Depot Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Routings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>